# nucleo32-stm32l432kc-template

./: CMakeLists.txt  Readme.md  nucleo32-stm32l4kc-base.ioc
Inc/: gpio.h  i2c.h  main.h  spi.h  stm32_assert.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  tim.h  usart.h
Src/: gpio.c  i2c.c  main.c  spi.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  system_stm32l4xx.c  tim.c  usart.c
